--- a/aula-ts-07/exerc/package.json
+++ b/aula-ts-07/exerc/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "aula-ts-04",
+  "name": "aula-ts-07",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
-  "type": "module",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "nodemon dist/index.ts",
+    "clean": "tsc --build --clean"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/node": "^20.6.0",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
