--- a/aula-ts-04/package.json
+++ b/aula-ts-04/package.json
@@ -5,15 +5,15 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "tsx ../src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
+    "tsx": "^3.12.10",
     "typescript": "^5.2.2"
   },
   "dependencies": {
