--- a/aula-ts-04/tsconfig.json
+++ b/aula-ts-04/tsconfig.json
@@ -7,6 +7,7 @@
     "baseUrl": "src",
   },
   "ts-node-esm": {
-    "esm": true
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
   },
 }
