--- a/aula-ts-11/package.json
+++ b/aula-ts-11/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "joi": "^17.10.1"
   }
 }
